# fafad

./: CMakeLists.txt  README.md
arc/: syntax.txt  syntax.txt~  system_prompt.txt
examples/: solution.gars
include/: ast.hpp  ast_visitor.hpp  codegen.hpp  lexer.hpp  parser.hpp  preproc.hpp  table.hpp  token.hpp  type.hpp  visitor.hpp
src/: access.json  answer.json  api.py  chat.py  codegen.cpp  compiler.cpp  lexer.cpp  parser.cpp  type.cpp  visitor.cpp
tests/: lib.cpp  lib.hpp  myvector.cpp  myvector.ll  test.cpp  test2  test2.cpp  test2.ll  test2.s  test3.cpp
tests/samples/: test1.gars
